syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
option java_multiple_files = true;

import "basic_types.proto";

/**
 * Undelete a file or smart contract that was deleted by SystemDelete; requires a Hedera
 * administrative multisignature. 
 */
message SystemUndeleteTransactionBody {
    oneof id {
        /**
         * The file ID to undelete, in the format used in transactions
         */
        FileID fileID = 1;

        /**
         * The contract ID instance to undelete, in the format used in transactions
         */
        ContractID contractID = 2;
    }
}
